--- a/OrbisGame/Views/Home/MainUser.cshtml
+++ b/OrbisGame/Views/Home/MainUser.cshtml
@@ -5,6 +5,7 @@
     <title>Orbis Game</title>
     <link rel="stylesheet" href="~/css/Menu.css" /> <!--ACA invoco al diseño (css) que esta en la clase site.css-->
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                                     'Confirmado!',
                                     'Sesion finalizada.',
                                     'success',
-                                     timers=7000,
+                                     timers:7000,
                                      window.location.replace("https://localhost:44375/Home/Inicio")
                                     
                                 )
